bug 567938 -  form.submit() broken if called from <input type='submit'>'s onclick handler. r=bzbarsky